[gd_scene load_steps=14 format=3 uid="uid://bjaswuxdk4dxg"]

[ext_resource type="Script" path="res://scenes/6_platformer/platforms.gd" id="1_m3oh2"]
[ext_resource type="Script" path="res://scenes/6_platformer/world_1.gd" id="1_vo5r3"]
[ext_resource type="PackedScene" uid="uid://dlfa2hivtgx0b" path="res://scenes/6_platformer/spikes.tscn" id="2_c7de1"]
[ext_resource type="PackedScene" uid="uid://c8p012doxqma6" path="res://scenes/6_platformer/heart.tscn" id="3_2p3xh"]
[ext_resource type="PackedScene" uid="uid://bo66pm343nwbt" path="res://scenes/6_platformer/tile_map.tscn" id="4_phtk6"]
[ext_resource type="PackedScene" uid="uid://c802rurlwmfo5" path="res://scenes/6_platformer/player.tscn" id="7_vkkit"]
[ext_resource type="PackedScene" uid="uid://b2gsmqqpmjflp" path="res://components/scenes/camera/camera_ex2d.tscn" id="8_xlu73"]
[ext_resource type="PackedScene" uid="uid://br2e8jj85usfs" path="res://scenes/6_platformer/level_complete.tscn" id="8_xv517"]
[ext_resource type="PackedScene" uid="uid://dammmywn1wtic" path="res://scenes/6_platformer/platform.tscn" id="9_nn26c"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nyn1h"]
size = Vector2(24, 64)

[sub_resource type="Animation" id="Animation_35utr"]
length = 3.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UILayer/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Start in 3"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UILayer/CenterContainer/StartInLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_m7085"]
resource_name = "countdown"
length = 3.25
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("UILayer/CenterContainer/StartInLabel:text")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.25, 1.35, 2.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": ["Start in 3", "Start in 2", "Start in 1"]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("UILayer/CenterContainer/StartInLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 3.25),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lpfx8"]
_data = {
"RESET": SubResource("Animation_35utr"),
"countdown": SubResource("Animation_m7085")
}

[node name="World1" type="Node2D" groups=["world"]]
process_mode = 1
script = ExtResource("1_vo5r3")

[node name="Platforms" type="StaticBody2D" parent="."]
collision_mask = 0
script = ExtResource("1_m3oh2")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Platforms"]
polygon = PackedVector2Array(0, -64, 24, -64, 24, 72, 48, 72, 112, 104, 160, 104, 208, 72, 224, 72, 224, 128, 248, 128, 248, 80, 280, 80, 280, 104, 328, 104, 368, 88, 440, 88, 440, 120, 480, 120, 480, -32, 504, -32, 504, 192, 0, 192)
disabled = true

[node name="Polygon2D" type="Polygon2D" parent="Platforms"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Platforms"]
position = Vector2(432, 16)
shape = SubResource("RectangleShape2D_nyn1h")
disabled = true

[node name="ColorRect" type="ColorRect" parent="Platforms"]
offset_left = 420.0
offset_top = -16.0
offset_right = 444.0
offset_bottom = 48.0

[node name="Spikes" parent="." instance=ExtResource("2_c7de1")]
position = Vector2(176, 120)

[node name="Spikes2" parent="." instance=ExtResource("2_c7de1")]
position = Vector2(192, 120)

[node name="Spikes3" parent="." instance=ExtResource("2_c7de1")]
position = Vector2(384, 120)

[node name="Spikes4" parent="." instance=ExtResource("2_c7de1")]
position = Vector2(400, 120)

[node name="Spikes5" parent="." instance=ExtResource("2_c7de1")]
position = Vector2(416, 120)

[node name="Heart" parent="." instance=ExtResource("3_2p3xh")]
position = Vector2(64, 87)

[node name="Heart2" parent="." instance=ExtResource("3_2p3xh")]
position = Vector2(77, 87)

[node name="Heart3" parent="." instance=ExtResource("3_2p3xh")]
position = Vector2(77, 73)

[node name="Heart4" parent="." instance=ExtResource("3_2p3xh")]
position = Vector2(64, 73)

[node name="TileMap" parent="." instance=ExtResource("4_phtk6")]
position = Vector2(-48, -8)
layer_0/name = "Base"
layer_0/tile_data = PackedInt32Array(-262144, 131072, 0, -196608, 131072, 1, -131072, 131072, 1, -65536, 131072, 1, 0, 131072, 1, 65536, 131072, 1, 131072, 131072, 1, 196608, 131072, 1, 262144, 131072, 1, 327680, 327680, 2, 393216, 65536, 1, 458752, 65536, 1, 524288, 65536, 1, 589824, 65536, 1, 655360, 65536, 1, 720896, 65536, 2, 720897, 65536, 2, 720898, 65536, 2, 720899, 65536, 2, 720900, 65536, 2, 720901, 65536, 2, 720902, 65536, 2, 720903, 65536, 2, 720904, 65536, 2, 720905, 65536, 2, 720906, 65536, 2, 720907, 65536, 2, 720908, 65536, 2, 720909, 65536, 2, 720910, 65536, 2, 720911, 65536, 2, 720912, 65536, 2, 720913, 65536, 2, 720914, 65536, 2, 720915, 65536, 2, 720916, 65536, 2, 720917, 65536, 2, 720918, 65536, 2, 720919, 65536, 2, 720920, 65536, 2, 720921, 65536, 2, 720922, 65536, 2, 720923, 65536, 2, 720924, 65536, 2, 720925, 65536, 2, 720926, 65536, 2, 720927, 131072, 2, 655391, 131072, 1, 589855, 131072, 1, 524319, 131072, 1, 458783, 131072, 1, 393247, 131072, 1, 393246, 0, 1, 327710, 0, 1, 262174, 0, 1, 196638, 0, 1, 327711, 131072, 1, 262175, 131072, 1, 196639, 131072, 1, 131103, 131072, 1, 131102, 0, 1, 65566, 0, 1, 30, 0, 1, -65506, 0, 1, -131042, 0, 0, -131041, 131072, 0, -65505, 131072, 1, 31, 131072, 1, 65567, 131072, 1, 458782, 0, 1, 524318, 393216, 2, 589854, 65536, 1, 655390, 65536, 1, 655389, 65536, 1, 655388, 65536, 1, 655377, 65536, 1, 655376, 65536, 1, 655375, 65536, 1, 655372, 65536, 1, 655371, 65536, 1, 655370, 65536, 1, 655369, 65536, 1, 655368, 65536, 1, 655367, 65536, 1, 655366, 65536, 1, 589830, 65536, 1, 589829, 65536, 1, 589828, 65536, 1, 589827, 65536, 1, 589826, 65536, 1, -196609, 0, 0, -131073, 0, 1, -65537, 0, 1, -1, 0, 1, 65535, 0, 1, 131071, 0, 1, 196607, 0, 1, 327679, 0, 1, 262143, 0, 1, 393215, 0, 1, 458751, 0, 1, 524287, 0, 1, 589823, 0, 1, 655359, 0, 1, 720895, 0, 1, 786431, 0, 2, 655364, 65536, 1, 655363, 65536, 1, 655362, 65536, 1, 655361, 65536, 1, 655365, 65536, 1, 655373, 65536, 1, 655374, 65536, 1, 655378, 65536, 1, 655379, 65536, 1, 655380, 65536, 1, 655381, 65536, 1, 655382, 65536, 1, 655383, 65536, 1, 655384, 65536, 1, 655385, 65536, 1, 655386, 65536, 1, 655387, 65536, 1, 589853, 65536, 1, 524317, 65536, 0, 524316, 65536, 0, 524315, 65536, 0, 524314, 327680, 2, 524313, 65536, 1, 524312, 65536, 1, 524311, 65536, 1, 524310, 65536, 1, 524309, 65536, 1, 524308, 65536, 1, 524307, 65536, 1, 524306, 65536, 1, 524305, 65536, 1, 524304, 393216, 2, 524303, 65536, 0, 524302, 65536, 0, 524301, 327680, 2, 524300, 65536, 1, 524299, 65536, 1, 524298, 65536, 1, 524297, 65536, 1, 524296, 65536, 1, 524295, 65536, 1, 524294, 65536, 1, 524293, 65536, 1, 524292, 65536, 1, 458756, 327680, 2, 458755, 65536, 1, 458754, 65536, 1, 458753, 65536, 1, 393217, 65536, 1, 393218, 65536, 1, 393219, 327680, 2, 393220, 131072, 0, 327681, 65536, 0, 327682, 65536, 0, 327683, 131072, 0, 524289, 65536, 1, 524290, 65536, 1, 524291, 65536, 1, 589825, 65536, 1, 589835, 65536, 1, 589834, 65536, 1, 589833, 65536, 1, 589832, 65536, 1, 589831, 65536, 1, 589836, 65536, 1, 589837, 65536, 1, 589838, 65536, 1, 589839, 65536, 1, 589840, 65536, 1, 589841, 65536, 1, 589842, 65536, 1, 589843, 65536, 1, 589844, 65536, 1, 589845, 65536, 1, 589846, 65536, 1, 589847, 65536, 1, 589848, 65536, 1, 589849, 65536, 1, 589850, 65536, 1, 589851, 65536, 1, 589852, 65536, 1, 458778, 131072, 1, 393242, 131072, 0, 393241, 0, 0, 458775, 65536, 0, 458776, 65536, 0, 458777, 393216, 2, 458774, 65536, 0, 458773, 65536, 0, 458772, 65536, 0, 458771, 65536, 0, 458770, 327680, 2, 458769, 65536, 1, 458768, 0, 1, 393232, 0, 1, 327696, 262144, 2, 458764, 65536, 1, 393228, 393216, 2, 393227, 0, 0, 458763, 393216, 2, 458762, 65536, 0, 458761, 65536, 0, 458760, 65536, 0, 458759, 65536, 0, 458758, 65536, 0, 458757, 65536, 0, 327693, 458752, 2, 393229, 131072, 1, 458765, 131072, 1, 327692, 0, 0, -131046, 196608, 0, -65510, 196608, 1, 26, 196608, 1, 65562, 196608, 2, 262157, 196608, 0, 262160, 196608, 0, 393233, 327680, 2, 393234, 131072, 0, 327697, 131072, 0)
layer_1/name = "Slopes"
layer_1/tile_data = PackedInt32Array(393226, 1, 0, 327691, 1, 0, 262156, 1, 0, 393221, 393218, 0, 327684, 393218, 0, 393240, 262145, 0, 393239, 196609, 0, 262157, 131072, 0, 327693, 131072, 1, 393219, 65536, 1, 327683, 65536, 0, 393220, 327682, 0, 393227, 65537, 0, 327692, 65537, 0, 393228, 65536, 1, 458763, 65536, 1, 458762, 65537, 0, 458757, 327682, 0, 458756, 65536, 1, 458776, 65536, 1, 458777, 65536, 1, 393241, 65536, 0, 458775, 327681, 0)

[node name="Player" parent="." instance=ExtResource("7_vkkit")]
position = Vector2(-8, 61)

[node name="CameraEx2D" parent="." instance=ExtResource("8_xlu73")]
position = Vector2(-7, 71)

[node name="UILayer" type="CanvasLayer" parent="."]
layer = 2

[node name="LevelComplete" parent="UILayer" instance=ExtResource("8_xv517")]
visible = false

[node name="StartInColorRect" type="ColorRect" parent="UILayer"]
unique_name_in_owner = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(1, 0, 0, 0.313726)

[node name="CenterContainer" type="CenterContainer" parent="UILayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="StartInLabel" type="Label" parent="UILayer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Start in 3"

[node name="CenterContainer2" type="CenterContainer" parent="UILayer"]
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 17.0
grow_horizontal = 2
size_flags_horizontal = 4

[node name="LevelTimeLabel" type="Label" parent="UILayer/CenterContainer2"]
unique_name_in_owner = true
custom_minimum_size = Vector2(64, 0)
layout_mode = 2
size_flags_horizontal = 4
vertical_alignment = 1

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
process_mode = 3
libraries = {
"": SubResource("AnimationLibrary_lpfx8")
}
autoplay = "countdown"

[node name="Platform" parent="." instance=ExtResource("9_nn26c")]
